--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "optimize-api-provider-logos": "rimraf ./optimized/api-provider & svgo -q -p 8 -f ./raw/api-providers -o ./optimized/api-provider",
         "build": "pnpm run optimize-chain-logos && pnpm run optimize-symbol-logos && pnpm run optimize-api-provider-logos && node scripts/build-svg.js",
         "fetch": "node scripts/fetch-missing.js",
-        "package": "pnpm run build && yarn pack --filename logos.tgz",
+        "package": "pnpm run build",
         "prettier": "prettier --write \"**/*.{js,jsx,json,md}\"",
         "release": "pnpm changeset publish"
     },
