--- a/renovate.json
+++ b/renovate.json
@@ -9,26 +9,28 @@
         {
             "matchUpdateTypes": ["patch", "minor"],
             "schedule": ["after 3pm on Friday"],
-            "groupName": "other minor updates"
+            "groupName": "other minor updates",
+            "labels": ["deploy", "fetch"]
         },
         {
             "matchUpdateTypes": ["major"],
             "schedule": ["after 1pm on Friday"],
-            "groupName": "other major updates"
+            "groupName": "other major updates",
+            "labels": ["deploy", "fetch"]
         },
         {
             "matchPackagePatterns": ["@api3/.*", "@phase21/.*"],
             "matchUpdateTypes": ["major"],
             "schedule": ["before 4pm"],
             "groupName": "api3 major updates",
-            "labels": ["deploy"]
+            "labels": ["deploy", "fetch"]
         },
         {
             "matchPackagePatterns": ["@api3/.*", "@phase21/.*"],
             "matchUpdateTypes": ["patch", "minor"],
             "schedule": ["before 6pm"],
             "groupName": "api3",
-            "labels": ["deploy"],
+            "labels": ["deploy", "fetch"],
             "automerge": true
         }
     ],
