--- a/viewer/package.json
+++ b/viewer/package.json
@@ -12,7 +12,7 @@
         "@testing-library/jest-dom": "^6.4.1",
         "@testing-library/react": "^14.2.1",
         "@testing-library/user-event": "^14.5.2",
-        "@phase21/logos": "file:../",
+        "@phase21/logos": "workspace:*",
         "framer-motion": "^11.0.3",
         "gh-pages": "^6.1.1",
         "react": "^18.2.0",
