--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "fetch": "node scripts/fetch-missing.js",
         "package": "pnpm run build",
         "prettier": "prettier --write \"**/*.{js,jsx,json,md}\"",
-        "release": "pnpm changeset publish"
+        "release": "pnpm changeset publish",
+        "auto-release": "node scripts/release.js"
     },
     "dependencies": {
         "camelcase": "^6.3.0"
