--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -41,10 +41,14 @@ jobs:
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'fetch')
         run: pnpm run fetch
       - uses: stefanzweifel/git-auto-commit-action@v5
+        id: auto-commit-action
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'fetch')
         with:
           commit_message: Fetch Logos from Dropbox
           commit_options: '--no-verify --signoff'
+      - name: "Run if changes have been detected"
+        if: steps.auto-commit-action.outputs.changes_detected == 'true'
+        run: echo "Changes!"
       - name: Build Package
         run: pnpm run package
       - name: Install Frontend Packages
