--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -51,7 +51,7 @@ jobs:
         if: steps.auto-commit-action.outputs.changes_detected == 'true'
         run: pnpm run auto-release
       - uses: stefanzweifel/git-auto-commit-action@v5
-        if : steps.add-changeset.outputs.changes_detected == 'true'
+        if : steps.auto-commit-action.outputs.changes_detected == 'true'
         with:
           commit_message: Added changeset
           commit_options: '--no-verify --signoff'
