Update git-auto-commit-action in deployfe.yml

--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -40,7 +40,8 @@ jobs:
       - name: Fetch Logos
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'fetch')
         run: pnpm run fetch
-      - uses: stefanzweifel/git-auto-commit-action@v5
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
         id: auto-commit-action
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'fetch')
         with:
@@ -50,7 +51,8 @@ jobs:
         id: add-changeset
         if: steps.auto-commit-action.outputs.changes_detected == 'true'
         run: pnpm run auto-release
-      - uses: stefanzweifel/git-auto-commit-action@v5
+      - name: Add changeset
+        uses: stefanzweifel/git-auto-commit-action@v5
         if : steps.auto-commit-action.outputs.changes_detected == 'true'
         with:
           commit_message: Added changeset
