Update auto-release workflow

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -3,8 +3,8 @@ name: Auto-release
 
 on:
   push:
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
