Add release workflow for logos package

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -43,6 +43,11 @@ jobs:
         if: steps.check_files.outputs.files_exists == 'true'
         run: pnpm changeset version
 
-      - name: Changeset publish
+      - name: Create Release
         if: steps.check_files.outputs.files_exists == 'true'
-        run: pnpm changeset publish
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: pnpm run release
+          commit: "ci: release logos package"
+          title: "ci: release logos package"
