Update cron schedule for auto-release and deployfe workflows

--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -5,7 +5,7 @@ name: Deploy to Github Pages
 
 on:
   schedule:
-      - cron: '*/5 * * * *'
+      - cron: '55 * * * *'
   push:
     branches: [ main ]
     paths:
