--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -3,7 +3,7 @@ name: Auto-release
 
 on:
   schedule:
-    - cron: '0 * * * *'
+      - cron: '15 */3,8-21 * * *'
   push:
     branches:
       - main
