Update labels in renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -10,27 +10,27 @@
             "matchUpdateTypes": ["patch", "minor"],
             "schedule": ["after 3pm on Friday"],
             "groupName": "other minor updates",
-            "labels": ["deploy", "fetch"]
+            "labels": ["deploy"]
         },
         {
             "matchUpdateTypes": ["major"],
             "schedule": ["after 1pm on Friday"],
             "groupName": "other major updates",
-            "labels": ["deploy", "fetch"]
+            "labels": ["deploy"]
         },
         {
             "matchPackagePatterns": ["@api3/.*", "@phase21/.*"],
             "matchUpdateTypes": ["major"],
             "schedule": ["before 4pm"],
             "groupName": "api3 major updates",
-            "labels": ["deploy", "fetch"]
+            "labels": ["deploy"]
         },
         {
             "matchPackagePatterns": ["@api3/.*", "@phase21/.*"],
             "matchUpdateTypes": ["patch", "minor"],
             "schedule": ["before 6pm"],
             "groupName": "api3",
-            "labels": ["deploy", "fetch"],
+            "labels": ["deploy"],
             "automerge": true
         }
     ],
