--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -18,7 +18,7 @@ on:
     branches: [ main ]
 
 jobs:
-  pack-and-deploy-to-gh-pages:
+  pack-and-deploy-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
