Set push options

--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -86,6 +86,7 @@ jobs:
         with:
           commit_message: Update version
           commit_options: '--no-verify --signoff'
+          push_options: '--set-upstream origin main'
 
       - name: Create Release
         if : steps.check_files.outputs.files_exists == 'true' && (github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'release'))
