--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -28,7 +28,7 @@ jobs:
           version: 8.12.1
       - uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
+          node-version: "20.x"
           cache: 'pnpm'
       - name: Set Env
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'fetch')
@@ -39,6 +39,8 @@ jobs:
           echo DROPBOX=${{ secrets.DROPBOX }} >> .env
       - name: Install Packages
         run: pnpm install 
+      - name: Lint
+        run: pnpm run lint
       - name: Fetch Logos
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'fetch')
         run: pnpm run fetch
