--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "type": "git",
         "url": "https://github.com/api3dao/logos"
     },
+    "private": false,
     "keywords": [
         "api3",
         "logos",
