--- a/viewer/package.json
+++ b/viewer/package.json
@@ -22,7 +22,7 @@
         "react-scripts": "5.0.1",
         "react-syntax-highlighter": "^15.5.0",
         "web-vitals": "^3.5.2",
-        "@phase21/api-integrations": "^1.6.0"
+        "@api3/api-integrations": "^1.3.0"
     },
     "scripts": {
         "start": "GENERATE_SOURCEMAP=false react-scripts start",
