--- a/viewer/package.json
+++ b/viewer/package.json
@@ -4,7 +4,6 @@
     "homepage": "https://api3dao.github.io/logos/",
     "private": true,
     "devDependencies": {
-        "@api3/chains": "^10.2.1",
         "@chakra-ui/icons": "^2.1.1",
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.13.3",
@@ -22,7 +21,7 @@
         "react-scripts": "5.0.1",
         "react-syntax-highlighter": "^15.5.0",
         "web-vitals": "^4.2.3",
-        "@api3/api-integrations": "^2.0.0"
+        "@api3/dapi-management": "1.84.0"
     },
     "scripts": {
         "start": "GENERATE_SOURCEMAP=false react-scripts start",
