Specify branch in version check workflow for logo fetching

--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -44,5 +44,6 @@ jobs:
               uses: stefanzweifel/git-auto-commit-action@v5
               id: auto-commit-action
               with:
+                  branch: control-branch
                   commit_message: Fetch updated logos from Dropbox
                   commit_options: '--no-verify --signoff'
