--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -47,6 +47,7 @@ jobs:
                   branch: control-branch
                   commit_message: Fetch updated logos from Dropbox
                   commit_options: '--no-verify --signoff'
+                  push_options: '--force'
             - name: Create pull request
               if: steps.auto-commit-action.outputs.changes_detected == 'true'
               run: gh pr create -B main -H control-branch --title 'Check logo updates' --body 'This PR checks for logo updates'
