Add JSON output option for pull request count in version check workflow

--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -57,6 +57,7 @@ jobs:
                       --repo "logos" \
                       --head 'control-branch' \
                       --base 'main' \
+                      --json title \
                       --jq 'length')
                   if ((prs > 0)); then
                       echo "skip=true" >> "$GITHUB_OUTPUT"
