Update repository reference in pull request list command in version check workflow

--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -54,7 +54,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   prs=$(gh pr list \
-                      --repo "logos" \
+                      --repo "$GITHUB_REPOSITORY" \
                       --head 'control-branch' \
                       --base 'main' \
                       --json title \
