--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -66,6 +66,6 @@ jobs:
 
             - name: Create pull request
               if: steps.auto-commit-action.outputs.changes_detected == 'true' && steps.check.outputs.skip != 'true'
-              run: gh pr create -B main -H control-branch --title 'Check logo updates' --body 'This PR checks for logo updates' --reviewer 'hiletmis'
+              run: gh pr create -B main -H control-branch --title 'Check logo updates' --reviewer 'hiletmis' --body-file ./changeset/changeset.md
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
