--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -8,12 +8,6 @@ on:
         - cron: '0 7,11,15,19 * * *'
     push:
         branches: [main]
-        paths:
-            - 'data/**'
-            - 'raw/**'
-            - scripts/**
-            - 'viewer/**'
-            - 'package.json'
     pull_request:
         branches: [main]
 
@@ -66,6 +60,6 @@ jobs:
 
             - name: Create pull request
               if: steps.auto-commit-action.outputs.changes_detected == 'true' && steps.check.outputs.skip != 'true'
-              run: gh pr create -B main -H control-branch --title 'Check logo updates' --reviewer 'hiletmis' --body-file ./changeset/changeset.md
+              run: gh pr create -B main -H control-branch --title 'Check logo updates' --reviewer 'hiletmis' --body-file .changeset/changeset.md
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
