--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -4,6 +4,25 @@
 name: Deploy to Github Pages
 
 on:
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
   schedule:
       - cron: '0 8,12,16,20 * * *'
   push:
