--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -6,23 +6,15 @@ name: Deploy to Github Pages
 on:
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
+      maintenance:
+        description: 'Maintenance mode'
         required: true
-        default: 'warning'
+        default: 'disabled'
         type: choice
         options:
-        - info
-        - warning
-        - debug
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
+        - enabled
+        - delayed
+        - disabled
   schedule:
       - cron: '0 8,12,16,20 * * *'
   push:
@@ -79,6 +71,8 @@ jobs:
       - name: Install Frontend Packages
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'deploy')
         run: pnpm install
+      - name: Check maintenance mode
+        run: ACTION=${{ inputs.maintenance }} pnpm maintenance
       - name: Build Frontend
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'deploy')
         run: pnpm --filter "viewer" build
