--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       maintenance:
-        description: 'Maintenance mode'
+        description: 'This workflow can be used to enable maintenance mode on the logos app. Choose "enabled" to enable maintenance mode immediately, "delayed" to enable maintenance mode after 10 minutes or "disabled" to disable maintenance mode. Make sure to run this workflow on the production-api3-market branch to avoid any issues.'
         required: true
         default: 'disabled'
         type: choice
