Remove camelcase dependency and update related configurations

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,7 @@
     "extends": ["config:recommended"],
     "packageRules": [
         {
-            "matchPackageNames": ["camelcase", "node-fetch"],
+            "matchPackageNames": ["node-fetch"],
             "enabled": false
         },
         {
