--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -4,6 +4,7 @@ name: Auto-release
 on:
   schedule:
       - cron: '15 8,12,16,20 * * *'
+  workflow_dispatch:
 
 env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
