Update GitHub Actions user configuration for commits

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -48,8 +48,8 @@ jobs:
       
       - name: Commit changes
         run: |
-          git config --global user.email "
-          git config --global user.name "GitHub Actions"
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
           git commit -m "ci: update changeset version"
           git push
