--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -47,6 +47,7 @@ jobs:
         run: pnpm changeset version
       
       - name: Commit changes
+        if: steps.check_files.outputs.files_exists == 'true'
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
